--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -39262,5 +39262,85 @@
         "published": "Mon, 05 Jan 2026 09:01:19 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"MeitY mulling to revoke X&#039;s safe harbour status\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/05/deepfake-ft.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid allegations of X-owned GenAI chatbot Grok generating obscene images based on users\u2019 prompts, the Indian government has reportedly issued&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/live/ces-2026-live-blog/",
+        "title": "CES Live Blog, Day 1: The Coolest Tech We\u2019ve Seen So Far",
+        "link": "https://www.wired.com/live/ces-2026-live-blog/",
+        "published": "Mon, 05 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Read our live updates from CES 2026 in Las Vegas to see the latest consumer gadgetry in all of its chatbot-enabled, sensor-packed, AI-infused glory."
+    },
+    {
+        "id": "https://www.wired.com/story/ces-2026-what-to-expect/",
+        "title": "At CES 2026, Everything Is AI. What Matters Is How You Use It",
+        "link": "https://www.wired.com/story/ces-2026-what-to-expect/",
+        "published": "Mon, 05 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Integrated chatbots and built-in machine intelligence are no longer standout features in consumer tech. If companies want to win in the AI era, they\u2019ve got to hone the user experience."
+    },
+    {
+        "id": "https://www.wired.com/story/i-switched-to-esim-and-i-am-full-of-regret/",
+        "title": "I Switched to eSIM, and I Am Full of Regret",
+        "link": "https://www.wired.com/story/i-switched-to-esim-and-i-am-full-of-regret/",
+        "published": "Mon, 05 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Switching between mobile phones used to be easy. Then came eSIM."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/starlink-offers-free-internet-access-in-venezuela-following-maduro-raid-102705135.html?src=rss",
+        "title": "Starlink offers free internet access in Venezuela following Maduro raid",
+        "link": "https://www.engadget.com/big-tech/starlink-offers-free-internet-access-in-venezuela-following-maduro-raid-102705135.html?src=rss",
+        "published": "Mon, 05 Jan 2026 10:27:05 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>SpaceX\u2019s <a class=\"link\" href=\"https://www.engadget.com/science/space/starlink-is-lowering-thousands-of-satellites-orbits-to-reduce-risk-of-collisions-030509067.html\" target=\"_blank\">Starlink</a> is offering customers in Venezuela free access to its internet service after the US captured the country\u2019s president, Nicol\u00e1s Maduro. According to <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=34e37b9c-8975-48da-aa39-df8bcd5badc3&amp;siteId=us-engadget&amp;pageId"
+    },
+    {
+        "id": "https://torrentfreak.com/annas-archive-loses-org-domain-after-surprise-suspension/",
+        "title": "Anna's Archive Loses .Org Domain After Surprise Suspension",
+        "link": "https://torrentfreak.com/annas-archive-loses-org-domain-after-surprise-suspension/",
+        "published": "Mon, 05 Jan 2026 10:23:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46497164\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/swiggy-launches-eatright-in-over-50-cities-targets-health-conscious-users/articleshow/126350997.cms",
+        "title": "Swiggy launches EatRight in over 50 cities, targets health-conscious users",
+        "link": "https://economictimes.indiatimes.com/tech/startups/swiggy-launches-eatright-in-over-50-cities-targets-health-conscious-users/articleshow/126350997.cms",
+        "published": "Mon, 05 Jan 2026 16:06:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The food delivery platform also shared insights based on its orders, revealing that Tier-2 cities in India witnessed 2x growth year-on-year in healthy food ordering as compared to metropolitan cities, with Chandigarh, Guwahati, Ludhiana, and Bhubaneswar leading the way."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/gig-workers-union-warns-of-more-strikes-swiggy-zomato-blinkit-zepto",
+        "title": "Gig workers\u2019 union warns of more strikes if delivery platforms don\u2019t come forward for talks",
+        "link": "https://yourstory.com/2026/01/gig-workers-union-warns-of-more-strikes-swiggy-zomato-blinkit-zepto",
+        "published": "Mon, 05 Jan 2026 10:14:18 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The leader of Telangana Gig and Platform Workers Union, a prominent gig workers union, says over 2 lakh delivery workers joined the protest on New Year's Eve, and warns of more action if quick commerce and food delivery platforms refuse to negotiate."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/innovating-for-delivery-workers-eternals-inclusive-growth-platform-economy-conference",
+        "title": "Innovating for delivery workers? Here's your chance to be recognised at Eternal's Inclusive Growth & Platform Economy Conference",
+        "link": "https://yourstory.com/2026/01/innovating-for-delivery-workers-eternals-inclusive-growth-platform-economy-conference",
+        "published": "Mon, 05 Jan 2026 09:32:56 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Platform Worker Wellbeing Challenge 2026, organised by Eternal and hosted on Startup India\u2019s Bharat Grand Startup Challenge page, is calling on startups that are building scalable solutions for health, safety, financial inclusion, upskilling, and social security for India\u2019s platform workers."
+    },
+    {
+        "id": "https://inc42.com/features/meet-the-top-10-indian-startup-investors-of-2025/",
+        "title": "Meet The Top 10 Indian Startup Investors Of 2025",
+        "link": "https://inc42.com/features/meet-the-top-10-indian-startup-investors-of-2025/",
+        "published": "Mon, 05 Jan 2026 11:08:06 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Meet The Top 10 Indian Startup Investors Of 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Indian startup funding showed signs of stabilisation in 2025, with startups raising a cumulative $11 Bn across 936 deals during&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-united-lending-interface-64-lenders-136-data-services/",
+        "title": "United Lending Interface Grows to 64 Lenders, 136 Data Services: What It Means for Borrowers",
+        "link": "https://www.medianama.com/2026/01/223-united-lending-interface-64-lenders-136-data-services/",
+        "published": "Mon, 05 Jan 2026 10:22:51 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>RBI's latest Banking Trends report highlighted how the United Lending Interface has nearly doubled its base in 2025 despite the lack of policy boundaries on what lenders can access on ULI. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-united-lending-interface-64-lenders-136-data-services/\">United Lending Interface Grows to 64 Lenders, 136 Data Services: What It Means for Borrowers</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
