--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -41742,5 +41742,69 @@
         "published": "Tue, 06 Jan 2026 07:28:36 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Jabalpur court has acquitted the operator of TellyTorrents in a decade-long movie piracy case, citing lack of forensic evidence, documentary proof, and procedural lapses. This verdict highlights how criminal copyright prosecutions in India often fail without independent expert analysis, even in high-profile cases.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-jabalpur-court-acquits-tellytorrents-site-operator-piracy-case/\">TellyTorrents Movie Piracy Case\u2014A Tale of Evidenc"
+    },
+    {
+        "id": "https://www.theverge.com/tech/856120/this-free-feature-helps-make-stolen-bosch-e-bikes-unsellable",
+        "title": "This free feature helps make stolen Bosch e-bikes unsellable",
+        "link": "https://www.theverge.com/tech/856120/this-free-feature-helps-make-stolen-bosch-e-bikes-unsellable",
+        "published": "2026-01-06T03:57:59-05:00",
+        "source": "The Verge",
+        "summary": "Stolen electric bikes built around Bosch motors will be harder to sell, service, and ride at the end of January. That's when Bosch is rolling a new digital theft feature that lets owners mark the bike as stolen in the Bosch Flow app - no subscription required. Bosch rolled out a similar feature for expensive [&#8230;]"
+    },
+    {
+        "id": "https://www.fdd.org/analysis/2025/06/25/mapping-the-protests-in-iran-2/",
+        "title": "Mapping Protests in Iran",
+        "link": "https://www.fdd.org/analysis/2025/06/25/mapping-the-protests-in-iran-2/",
+        "published": "Tue, 06 Jan 2026 08:00:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46509788\">Comments</a>"
+    },
+    {
+        "id": "https://www.ianvisits.co.uk/articles/tube-trains-could-navigate-the-underground-using-the-weird-rules-of-quantum-physics-86370/",
+        "title": "Tube trains could navigate the Underground using the rules of Quantum Physics",
+        "link": "https://www.ianvisits.co.uk/articles/tube-trains-could-navigate-the-underground-using-the-weird-rules-of-quantum-physics-86370/",
+        "published": "Tue, 06 Jan 2026 08:26:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46509967\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-galaxy-z-trifold-hands-on-ces/",
+        "title": "Holding the Samsung Galaxy Z TriFold gave me faith in foldable phones again - and I'm not alone",
+        "link": "https://www.zdnet.com/article/samsung-galaxy-z-trifold-hands-on-ces/",
+        "published": "Tue, 06 Jan 2026 08:23:45 GMT",
+        "source": "Latest news",
+        "summary": "Let's set aside the spec talks for a moment and acknowledge the form factor that should've always been."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/indias-private-credit-moment-a-quiet-shift-in-global-relative-value/articleshow/126369632.cms",
+        "title": "India\u2019s private credit moment: A quiet shift in global relative value",
+        "link": "https://economictimes.indiatimes.com/tech/startups/indias-private-credit-moment-a-quiet-shift-in-global-relative-value/articleshow/126369632.cms",
+        "published": "Tue, 06 Jan 2026 13:45:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India's private credit market is growing rapidly.  Deal volumes are rising, and assets under management are expanding.  This market offers higher yields compared to developed economies.  Global investors are increasingly looking at India for attractive returns.  Local expertise is key for success.  Risks are becoming manageable and priceable.  India presents a unique combination of high yields and diversification."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ces-2026-all-you-need-to-know-about-nvidias-major-announcements/articleshow/126369415.cms",
+        "title": "CES 2026: All you need to know about Nvidia's major announcements",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ces-2026-all-you-need-to-know-about-nvidias-major-announcements/articleshow/126369415.cms",
+        "published": "Tue, 06 Jan 2026 13:42:58 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia unveiled Alpamayo at CES 2026, an open-source AI model that adds reasoning to autonomous vehicles and robotics. The technology will debut with Mercedes-Benz from early 2026.  Nvidia also launched the new Vera Rubin chip. Nvidia is also open-sourcing models, simulation tools and large driving datasets for developers globally."
+    },
+    {
+        "id": "https://inc42.com/buzz/exclusive-ortho-treatment-startup-osso-raises-inr-4-cr-from-haldiram-family-office-others/",
+        "title": "Exclusive: Ortho Treatment Startup OSSO Raises INR 4 Cr From Haldiram Family Office, Others",
+        "link": "https://inc42.com/buzz/exclusive-ortho-treatment-startup-osso-raises-inr-4-cr-from-haldiram-family-office-others/",
+        "published": "Tue, 06 Jan 2026 08:37:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"OSSO Funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/OSSO-Funding-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Healthcare startup OSSO (One Stop Shop For Orthopaedics) has secured INR 4 Cr ($443K) in a seed funding round from&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-ed-raids-anurag-dwivedi-rmg-ban-online-betting-timeline/",
+        "title": "ED Raids YouTuber and Influencer Anurag Dwivedi in Betting Probe: A Timeline Of Raids Since The RMG Ban",
+        "link": "https://www.medianama.com/2026/01/223-ed-raids-anurag-dwivedi-rmg-ban-online-betting-timeline/",
+        "published": "Tue, 06 Jan 2026 09:06:31 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Enforcement Directorate has conducted multiple searches linked to influencer Anurag Dwivedi as part of an alleged illegal online betting and money-laundering probe under the PMLA. A timeline of enforcement action in an illegal online betting probe since the real-money gaming ban.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-ed-raids-anurag-dwivedi-rmg-ban-online-betting-timeline/\">ED Raids YouTuber and Influencer Anurag Dwivedi in Betting Probe: A Timeline Of Raids Since"
     }
 ]
